# blue-lugia

./: .coverage  .gitignore  README.md  app.py  lean.py  play.py  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
blue_lugia/: app.py  app_factory.py  config.py  enums.py  errors.py  logging.py  processor.py  state.py  utils.py
blue_lugia/commands/: __init__.py  clear.py  help.py  joke.py  lib.py  main.py  models.py  play.py  prompt.py  replay.py  revert.py  store.py  version.py
blue_lugia/managers/: __init__.py  file.py  llm.py  manager.py  message.py  storage.py
blue_lugia/middlewares/: __init__.py  middleware.py
blue_lugia/models/: __init__.py  embedding.py  event.py  file.py  message.py  model.py  query.py  store.py  tool.py
blue_lugia/orm/: README.md  __init__.py  driver.py  manager.py  model.py  queryset.py  source.py
doc/: README.md  app.md  module_config.md  references.md  state_manager.md
doc/managers/: files.md  llm.md  messages.md  storage.md
doc/models/: event.md  files.md  messages.md  query.md
playground/: api.py  core.py  driver.py  gpt.py  manager.py  model.py  queryset.py  source.py
tests/: test_app.py  test_chunk.py  test_chunklist.py  test_file_manager.py  test_filemanager.py  test_llm.py  test_message.py  test_messagelist.py  test_orm.py  test_query.py  test_state.py
tests/mocks/: app.py  event.py  llm.py  messages.py  tokenizer.py
